--- a/index.html
+++ b/index.html
@@ -2,249 +2,259 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Muhammet Mustafa HASTAOĞLUGİL Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Muhammet Mustafa HASTAOĞLUGİL Portfolio</title>
 
-    <!-- Google Fonts - Montserrat -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts - Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
-    <!-- Three.js Kütüphanesi -->
-    <script src="three.min.js"></script>
+  <!-- Three.js Kütüphanesi -->
+  <script src="three.min.js"></script>
 
-    <style>
-        /* 3D Canvas */
-        #bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            width: 100vw;
-            height: 100vh;
-        }
+  <style>
+    #bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100vw;
+      height: 100vh;
+    }
 
-        body {
-            font-family: 'Montserrat', sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-image: url('background-image.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-        }
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      background-image: url('background-image.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+    }
 
-        header {
-            background: linear-gradient(45deg, #333, #444, #555);
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
+    header {
+      background: linear-gradient(45deg, #333, #444, #555);
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
 
-        .about {
-            padding: 30px;
-            background-color: rgba(255, 255, 255, 0.8);
-            text-align: center;
-            border-radius: 10px;
-            margin: 15px;
-        }
+    .about {
+      padding: 30px;
+      background-color: rgba(255, 255, 255, 0.8);
+      text-align: center;
+      border-radius: 10px;
+      margin: 15px;
+    }
 
-        .about h2 {
-            font-size: 1.8em;
-            margin-bottom: 15px;
-        }
+    .about h2 {
+      font-size: 1.8em;
+      margin-bottom: 15px;
+    }
 
-        .about p {
-            font-size: 1em;
-            color: #666;
-            margin-bottom: 20px;
-        }
+    .about p {
+      font-size: 1em;
+      color: #666;
+      margin-bottom: 20px;
+    }
 
-        .about img {
-            width: 150px;
-            height: 150px;
-            border: 4px solid #333;
-        }
+    .projects {
+      padding: 50px;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 15px;
+      margin: 20px;
+    }
 
-        .projects {
-            padding: 50px;
-            text-align: center;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 15px;
-            margin: 20px;
-        }
+    .project-item {
+      display: inline-block;
+      width: 400px;
+      margin: 20px;
+      background-color: #333;
+      padding: 20px;
+      color: white;
+      border-radius: 15px;
+      transition: 0.3s ease;
+    }
 
-        .projects h2 {
-            font-size: 2em;
-            margin-bottom: 30px;
-        }
+    .project-item:hover {
+      transform: scale(1.05);
+      background: white;
+      color: black;
+    }
 
-        .project-item {
-            display: inline-block;
-            width: 400px;
-            margin: 20px;
-            background-color: #333333;
-            padding: 20px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            border-radius: 15px;
-            vertical-align: top;
-            color: #fff;
-            transition: all 0.5s ease;
-        }
+    .project-item iframe,
+    .project-item video {
+      width: 100%;
+      height: 225px;
+      border-radius: 8px;
+    }
 
-        .project-item:hover {
-            transform: scale(1.1);
-            background-color: #fff;
-            color: #333;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-        }
+    .project-links {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
 
-        .project-item video,
-        .project-item iframe {
-            width: 100%;
-            height: 225px;
-            border-radius: 8px;
-        }
+    .project-links img {
+      width: 80px;
+      height: 80px;
+    }
 
-        .project-links {
-            margin-top: 15px;
-            display: flex;
-            justify-content: center;
-        }
+    .social-icons {
+      text-align: center;
+      padding: 20px;
+    }
 
-        .project-links a {
-            display: inline-block;
-            width: 120px;
-            height: 120px;
-            background-color: transparent;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 120px;
-            border-radius: 10px;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-            margin: 20px;
-        }
+    .social-icons a {
+      margin: 0 10px;
+      font-size: 24px;
+      color: #444;
+    }
 
-        .project-links img {
-            max-width: 80px;
-            max-height: 80px;
-            vertical-align: middle;
-        }
+    .social-icons a:hover {
+      color: #3498db;
+    }
 
-        .project-links a:hover {
-            transform: scale(1.1);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-            cursor: pointer;
-            background-color: #333333;
-        }
-
-        .social-icons {
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        .social-icons a {
-            margin: 0 10px;
-            color: #555;
-            font-size: 24px;
-            text-decoration: none;
-        }
-
-        .social-icons a:hover {
-            color: #3498db;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: linear-gradient(45deg, #333, #444, #555);
-            color: white;
-        }
-
-        footer p {
-            margin: 0;
-            font-size: 1em;
-        }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 5px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-    </style>
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: linear-gradient(45deg, #333, #444, #555);
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
+  <canvas id="bg"></canvas>
 
-    <!-- 3D Arka Plan -->
-    <canvas id="bg"></canvas>
+  <header>
+    <h1>Muhammet Mustafa HASTAOĞLUGİL Portfolio</h1>
+  </header>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Muhammet Mustafa HASTAOĞLUGİL Portfolio</h1>
-    </header>
+  <section class="about">
+    <h2>About Me</h2>
+    <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
+    <p>I'm a passionate <strong>Computer Engineer</strong> with experience in game and mobile app development.</p>
 
-    <!-- Self Introduction Section -->
-    <section class="about">
-        <h2>About Me</h2>
-        <img src="profile.jpg" alt="Profile Picture" style="display: none;">
-        <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
-        <p>I'm a passionate <strong>Computer Engineer</strong> with a strong interest in developing innovative solutions
-            and learning new technologies.</p>
+    <h3>🛠 Skills & Technologies</h3>
+    <ul>
+      <li><strong>Programming Languages:</strong> Python, C#, Java, JavaScript, C</li>
+      <li><strong>Mobile Development:</strong> Flutter, Android (Java)</li>
+      <li><strong>Game Development:</strong> Unity, C#</li>
+      <li><strong>Database:</strong> MySQL, Firebase</li>
+      <li><strong>Cloud:</strong> Firebase, Google Cloud</li>
+      <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
+    </ul>
+  </section>
 
-        <h3>🛠 Skills & Technologies</h3>
-        <ul>
-            <li><strong>Programming Languages:</strong> Python, C#, Java, JavaScript, C</li>
-            <li><strong>Mobile Development:</strong> Flutter, Android (Java)</li>
-            <li><strong>Game Development:</strong> Unity, C#</li>
-            <li><strong>Database Management:</strong> MySQL, Firebase</li>
-            <li><strong>Cloud Services:</strong> Firebase, Google Cloud</li>
-            <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
-        </ul>
-    </section>
+  <section class="projects">
+    <h2>My Projects</h2>
 
-    <!-- Projects Section -->
-    <section class="projects">
-        <h2>My Projects</h2>
-
-        <!-- Her project-item burada olduğu gibi kalıyor -->
-        <!-- (YouTube iframe’leri ve video’lar) -->
-        <!-- (Kod uzun diye burada tekrar yazmıyorum ama sende kalmalı) -->
-    </section>
-
-    <!-- Social Media Icons -->
-    <div class="social-icons">
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+    <div class="project-item">
+      <h3>Gun Plus Fever!</h3>
+      <iframe src="https://youtube.com/embed/uhNxvZipnQ8" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.GunPlusFever&hl=en">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/tr/app/gun-plus-fever/id6449928628">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
     </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
-    </footer>
+    <div class="project-item">
+      <h3>Bottle Runner Gun</h3>
+      <video controls>
+        <source src="project2.mp4" type="video/mp4">
+      </video>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/bottle-runner-gun/id6453169545">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
 
-    <!-- JS dosyan -->
-    <script src="script.js"></script>
+    <div class="project-item">
+      <h3>My Tasty Empire</h3>
+      <iframe src="https://www.youtube.com/embed/xwZl2fbaeZI" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyTastyEmpire&hl=en">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>My Berry Farm</h3>
+      <iframe src="https://www.youtube.com/embed/KYoJAuQ7C14" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyBerryFarm">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/ec/app/my-berry-farm/id6636528155?l=en-GB">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Crowd Busters</h3>
+      <iframe src="https://www.youtube.com/embed/KYoJAuQ7C14" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.CrowdBusters">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/ec/app/crowd-busters/id6459474589?l=en-GB">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Voxel Crusher Run</h3>
+      <iframe src="https://www.youtube.com/embed/wBJ8_EVu_iE" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <div class="social-icons">
+    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+  </div>
+
+  <footer>
+    <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
